changed filtering logic and added tests