@@ -2,19 +2,19 @@ package io.skai.template.services;
 
 import com.kenshoo.openplatform.apimodel.QueryFilter;
 import com.kenshoo.openplatform.apimodel.enums.FilterOperator;
-import io.skai.template.dataaccess.table.CampaignTable;
+import io.skai.template.dataaccess.entities.AdGroup;
+import io.skai.template.dataaccess.entities.Campaign;
+import io.skai.template.dataaccess.entities.FieldMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jooq.Condition;
 import org.jooq.Record;
 import org.jooq.TableField;
-import org.jooq.impl.DSL;
+import org.jooq.lambda.Seq;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service("FilterQueryService")
@@ -22,27 +22,21 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class FilterQueryServiceImpl implements FilterQueryService {
 
-    private static final String CAMPAIGN_TABLE_NAME = CampaignTable.TABLE.getName();
     private static final String AD_GROUP_PREFIX = "adGroup.";
-    private static final Map<String, String> matchRequestFieldToDbFieldMap = Map.of(
-            "campaign", "campaign",
-            "adGroup", "ad_groups"
-    );
+    private final FieldMapperService fieldMapperService;
 
     @Override
-    public List<Condition> filteringCampaigns(List<QueryFilter<List<String>>> queryFilters, List<TableField<Record, ?>> fields) {
+    public Condition filteringCampaigns(List<QueryFilter<List<String>>> queryFilters) {
         final List<QueryFilter<List<String>>> filters = getQueryFiltersWithoutPrefix(queryFilters);
-        final Map<String, List<QueryFilter<List<String>>>> groupedFilters = groupingQueries(filters);
 
-        return filtering(groupedFilters, CAMPAIGN_TABLE_NAME, fields);
+        return Seq.seq(filters).map(this::filtering).reduce(Condition::or).orElse(null);
     }
 
     @Override
-    public List<Condition> filteringCampaignsWithPrefix(List<QueryFilter<List<String>>> queryFilters, List<TableField<Record, ?>> fields) {
+    public Condition filteringCampaignsWithPrefix(List<QueryFilter<List<String>>> queryFilters) {
         final List<QueryFilter<List<String>>> filters = getQueryFiltersWithPrefix(queryFilters, AD_GROUP_PREFIX);
-        final Map<String, List<QueryFilter<List<String>>>> groupedFilters = groupingQueries(filters);
 
-        return filtering(groupedFilters, CAMPAIGN_TABLE_NAME, fields);
+        return Seq.seq(filters).map(this::filtering).reduce(Condition::or).orElse(null);
     }
 
     private List<QueryFilter<List<String>>> getQueryFiltersWithoutPrefix(List<QueryFilter<List<String>>> queryFilters) {
@@ -53,66 +47,43 @@ public class FilterQueryServiceImpl implements FilterQueryService {
         return queryFilters.stream().filter(filter -> filter.getField().startsWith(prefix)).toList();
     }
 
-    private Map<String, List<QueryFilter<List<String>>>> groupingQueries(List<QueryFilter<List<String>>> filters) {
-        return filters.stream().collect(Collectors.groupingBy(filter -> filter.getOperator().getValue()));
+    private Condition filtering(QueryFilter<List<String>> filter) {
+        final FilterOperator operator = filter.getOperator();
+        final List<String> values = filter.getValues();
+        final String field = filter.getField();
+
+        return switch (operator) {
+            case EQUALS -> filteringByEquals(values, field);
+            case IN -> filteringByIn(values, field);
+            default -> throw new IllegalStateException("Unexpected value: " + operator);
+        };
     }
 
-    private List<Condition> filtering(Map<String, List<QueryFilter<List<String>>>> groupedFilters, String tableName, List<TableField<Record, ?>> fields) {
-        return groupedFilters.entrySet().stream().map(entry -> {
-                    final String operation = entry.getKey();
-                    final List<QueryFilter<List<String>>> queries = entry.getValue();
-
-                    return switch (FilterOperator.valueOf(operation)) {
-                        case EQUALS -> filteringByEquals(queries, tableName, fields);
-                        case IN -> filteringByIn(queries, tableName, fields);
-                        default -> throw new IllegalStateException("Unexpected value: " + FilterOperator.valueOf(operation));
-                    };
-                })
-                .toList();
-    }
-
-    private Condition filteringByEquals(List<QueryFilter<List<String>>> queryFilters, String tableName, List<TableField<Record, ?>> fields) {
-        return queryFilters.stream().map(query -> {
-                    final String queryField = query.getField();
-                    final TableField<Record, ?> fieldToSearch = getFieldToSearchFormQueryField(queryField, tableName, fields);
-
-                    return query.getValues().stream().map(queryValue -> {
-                        final String sql = String.join(".", fieldToSearch.getQualifiedName().getName()) + "=" + "?";
-                        return DSL.condition(sql, queryValue);
-                    }).toList();
-                })
-                .flatMap(Collection::stream)
+    private Condition filteringByEquals(List<String> values, String field) {
+        final List<TableField<Record, ?>> fieldToSearch = getTableFields(field).stream().map(FieldMapper::getDbField).collect(Collectors.toList());
+        return Seq.seq(values)
+                .map(value -> Seq.seq(fieldToSearch).map(dbField -> dbField.equalIgnoreCase(value)))
+                .flatMap(Seq::stream)
                 .reduce(Condition::or)
                 .orElse(null);
     }
 
-    private Condition filteringByIn(List<QueryFilter<List<String>>> queryFilters, String tableName, List<TableField<Record, ?>> fields) {
-        return queryFilters.stream().map(query -> {
-                    final String queryField = query.getField();
-                    final TableField<Record, ?> fieldToSearch = getFieldToSearchFormQueryField(queryField, tableName, fields);
 
-                    return fieldToSearch.in(query.getValues());
-                })
+    private Condition filteringByIn(List<String> values, String field) {
+        return Seq.seq(getTableFields(field))
+                .map(dbField -> dbField.getDbField().in(values))
                 .reduce(Condition::or)
                 .orElse(null);
     }
 
-    private String formattingQueryNames(String queryFieldName) {
-        return queryFieldName.replaceAll("(.)(\\p{Lu})", "$1_$2").toLowerCase();
-    }
+    private List<FieldMapper<?, ?>> getTableFields(String field) {
+        final FieldMapper<?, Campaign.CampaignBuilder> fieldToSearchWithoutPrefix = fieldMapperService.parseCampaignField(field).orElse(null);
+        final FieldMapper<?, AdGroup.AdGroupBuilder> fieldToSearchWithPrefix = fieldMapperService.parseCampaignFieldWithPrefix(field).orElse(null);
 
-    private TableField<Record, ?> getFieldToSearchFormQueryField(String queryField, String tableName, List<TableField<Record, ?>> fields) {
-        final String field = queryField.contains(".") ? queryField : tableName + "." + queryField;
-        final String originalField = Arrays
-                .stream(field.split("\\."))
-                .reduce((v1, v2) -> formattingQueryNames(String.join(".", matchRequestFieldToDbFieldMap.get(v1), v2)))
-                .orElse(null);
-
-        return fields
-                .stream()
-                .filter(dbField -> String.join(".", dbField.getQualifiedName().getName()).equals(originalField))
-                .findFirst()
-                .orElse(null);
+        return Seq.of(
+                fieldToSearchWithoutPrefix,
+                fieldToSearchWithPrefix
+        ).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
 }
